--- a/Tendigi Test/Tendigi Test/Base.lproj/Main.storyboard
+++ b/Tendigi Test/Tendigi Test/Base.lproj/Main.storyboard
@@ -41,6 +41,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PT2-fL-Esd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.55294117647058827" green="0.45098039215686275" blue="0.85490196078431369" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
